k8s/live/local/oidc-mock-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oidc-mock-server-ingress
  # This one is accessed with a prefix like others, but contrary to others which serve at '/',
  # it requires the original url without the path rewrite (the prefix is separately configured
  # in the container to understand this)
spec:
  rules:
  - http:
      paths:
      - path: /oidc-mock-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: oidc-mock-server
            port:
              number: 80
